--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ title: Audio-Visual Analytics
 email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
   Towards a Research Agenda for Integrating Sonification and Visualization
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "/website-demo" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  jekyll
